Adiciona sistema de avaliação com estrelas, atualiza ratings e remove arquivos desnecessários

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
   <title>Infoperfumes</title>
 
   <meta name="description" content="Infoperfumes: catálogo com descrições detalhadas de perfumes — notas, perfumistas, sensações e recomendações." />
-<<<<<<< HEAD
-=======
   <!-- Favicon / logo da aba (salve a imagem em images/logo.png) -->
->>>>>>> 047ef11b9381e94fe4590fffe6050d9e4d1ceb39
   <link rel="icon" type="image/png" href="images/logo.png">
   <link rel="apple-touch-icon" href="images/logo.png">
 
@@ -87,7 +84,7 @@
           <h4>Dior Homme Intense (2011)</h4>
           <p class="text-muted">Íris · Violeta · Madeira</p>
 
-          <div class="rating" data-product-id="dior-homme-intense" data-external-rating="4.3" data-external-count="234">
+          <div class="rating" data-product-id="dior-homme-intense" data-external-rating="4.6" data-external-count="234">
             <div class="rating-display" aria-hidden="true">
               <div class="stars-outer" aria-hidden="true">
                 <span class="stars-text">★★★★★</span>
@@ -107,7 +104,7 @@
           <h4>Acqua di Giò (1996)</h4>
           <p class="text-muted">Cítricos · Água · Almíscar</p>
 
-          <div class="rating" data-product-id="acqua-di-gio" data-external-rating="4.2" data-external-count="182">
+          <div class="rating" data-product-id="acqua-di-gio" data-external-rating="4.7" data-external-count="182">
             <div class="rating-display" aria-hidden="true">
               <div class="stars-outer" aria-hidden="true">
                 <span class="stars-text">★★★★★</span>
@@ -127,7 +124,7 @@
           <h4>Bleu de Chanel EDP (2014)</h4>
           <p class="text-muted">Toranja · Cedro · Incenso</p>
 
-          <div class="rating" data-product-id="bleu-de-chanel" data-external-rating="4.4" data-external-count="415">
+          <div class="rating" data-product-id="bleu-de-chanel" data-external-rating="4.8" data-external-count="415">
             <div class="rating-display" aria-hidden="true">
               <div class="stars-outer" aria-hidden="true">
                 <span class="stars-text">★★★★★</span>
@@ -147,7 +144,7 @@
           <h4>La Nuit de L'Homme (2009)</h4>
           <p class="text-muted">Cardamomo · Lavanda · Cedro</p>
 
-          <div class="rating" data-product-id="la-nuit-de-lhomme" data-external-rating="4.1" data-external-count="198">
+          <div class="rating" data-product-id="la-nuit-de-lhomme" data-external-rating="4.5" data-external-count="198">
             <div class="rating-display" aria-hidden="true">
               <div class="stars-outer" aria-hidden="true">
                 <span class="stars-text">★★★★★</span>
@@ -167,7 +164,7 @@
           <h4>Invictus (2013)</h4>
           <p class="text-muted">Tangerina · Patchouli · Guaiaco</p>
 
-          <div class="rating" data-product-id="invictus" data-external-rating="4.0" data-external-count="156">
+          <div class="rating" data-product-id="invictus" data-external-rating="4.6" data-external-count="156">
             <div class="rating-display" aria-hidden="true">
               <div class="stars-outer" aria-hidden="true">
                 <span class="stars-text">★★★★★</span>
@@ -193,7 +190,7 @@
           <h4>La Vie Est Belle (2012)</h4>
           <p class="text-muted">Íris · Baunilha · Patchouli</p>
 
-          <div class="rating" data-product-id="la-vie-est-belle" data-external-rating="4.2" data-external-count="328">
+          <div class="rating" data-product-id="la-vie-est-belle" data-external-rating="4.5" data-external-count="328">
             <div class="rating-display" aria-hidden="true">
               <div class="stars-outer" aria-hidden="true">
                 <span class="stars-text">★★★★★</span>
@@ -213,7 +210,7 @@
           <h4>Light Blue (2001)</h4>
           <p class="text-muted">Maçã · Limão · Cedro</p>
 
-          <div class="rating" data-product-id="light-blue" data-external-rating="4.0" data-external-count="210">
+          <div class="rating" data-product-id="light-blue" data-external-rating="4.4" data-external-count="210">
             <div class="rating-display" aria-hidden="true">
               <div class="stars-outer" aria-hidden="true">
                 <span class="stars-text">★★★★★</span>
@@ -233,7 +230,7 @@
           <h4>Black Opium (2014)</h4>
           <p class="text-muted">Café · Baunilha · Flores</p>
 
-          <div class="rating" data-product-id="black-opium" data-external-rating="4.1" data-external-count="298">
+          <div class="rating" data-product-id="black-opium" data-external-rating="4.4" data-external-count="298">
             <div class="rating-display" aria-hidden="true">
               <div class="stars-outer" aria-hidden="true">
                 <span class="stars-text">★★★★★</span>
@@ -253,7 +250,7 @@
           <h4>Flowerbomb (2005)</h4>
           <p class="text-muted">Jasmim · Rosa · Patchouli</p>
 
-          <div class="rating" data-product-id="flowerbomb" data-external-rating="4.3" data-external-count="256">
+          <div class="rating" data-product-id="flowerbomb" data-external-rating="4.4" data-external-count="256">
             <div class="rating-display" aria-hidden="true">
               <div class="stars-outer" aria-hidden="true">
                 <span class="stars-text">★★★★★</span>
@@ -273,7 +270,7 @@
           <h4>Chanel Nº5 (1921)</h4>
           <p class="text-muted">Aldeídos · Rosa · Jasmim</p>
 
-          <div class="rating" data-product-id="chanel-no5" data-external-rating="4.6" data-external-count="512">
+          <div class="rating" data-product-id="chanel-no5" data-external-rating="4.3" data-external-count="512">
             <div class="rating-display" aria-hidden="true">
               <div class="stars-outer" aria-hidden="true">
                 <span class="stars-text">★★★★★</span>
@@ -307,6 +304,7 @@
 
   <script src="app.js"></script>
   <script src="avaliacoes.js"></script>
+  <script src="metricas.js"></script>
 
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
